# Spacial-Freeze

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/models/: Bookshelf.blend  Bookshelf.blend1  Bookshelf.mtl  Table.blend  Table.blend1  Table.mtl
classes/: Camera.cpp  Camera.h  CubeModel.cpp  CubeModel.h  Framebuffer.cpp  Framebuffer.h  Instance.cpp  Instance.h  Lightning.cpp  Lightning.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  SquareMesh.cpp  SquareMesh.h  SquareModel.cpp  SquareModel.h
headers/: error.h  logger.h  texture.h
include/glfw-3.2.1/docs/html/: quick_guide.html
include/glfw-3.2.1/examples/: heightmap.c
include/glfw-3.2.1/include/GLFW/: glfw3.h
include/glfw-3.2.1/src/: nsgl_context.m
include/glm/detail/: _features.hpp
shaders/: basic2d.vert  basic3d.vert  lightning.frag  model.frag  solidColour.frag  texture.frag
src/: Lightning.cpp  Lightning.h  Renderer.cpp  Renderer.h  data.cpp  error.cpp  frame.cpp  framebuffer.cpp  glad.c  include.cpp  init.cpp  logger.cpp  main.cpp  texture.cpp  util.cpp
src/core/: BoxColliderComponent.cpp  Camera.cpp  CubeMesh.cpp  CubeModel.cpp  Framebuffer.cpp  Instance.cpp  Light.cpp  Mesh.cpp  Model.cpp  PhysicsComponent.cpp  Scene.cpp  Shader.cpp  SquareMesh.cpp  Transformation.cpp  core.hpp  data.cpp  error.cpp  frame.cpp  include.cpp  init.cpp  logger.cpp  preInit.cpp  stencil.cpp  texture.cpp  util.cpp
src/core/headers/: BoxColliderComponent.h  Camera.h  Component.h  CubeMesh.h  CubeModel.h  Framebuffer.h  Instance.h  Light.h  Mesh.h  Model.h  PhysicsComponent.h  Scene.h  Shader.h  SquareMesh.h  Transformation.h  error.h  frame.h  init.h  logger.h  preInit.h  stencil.h  texture.h  util.h
src/shaders/: model.frag  solidColour.frag  texture.frag
src/shaders/fragment/: lightning.frag  model.frag  shadow.frag  solidColour.frag  texture.frag
src/shaders/geometry/: shadow.geom
src/shaders/vertex/: basic2d.vert  basic3d.vert  shadow.vert
